feat: add envconfig and -h flag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "cSpell.words": [
     "bluemonday",
     "envconfig",
+    "errcheck",
     "Errorw",
     "firestore",
     "gochecknoglobals",
+    "gocritic",
     "gomnd",
     "gqlerror",
     "gqlgen",
